assignment2/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'::'", "'&&'", "'||'", "'=='", "'<='", "'>='", "'!='", 
                     "'<'", "'>'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "':'", "'.'", "'='", "'int'", "'integer'", 
                     "'float'", "'string'", "'boolean'", "'void'", "'array'", 
                     "'inherit'", "'function'", "'if'", "'else'", "'for'", 
                     "'while'", "'do'", "'break'", "'continue'", "'return'", 
                     "'out'", "'auto'", "'of'" ]

    symbolicNames = [ "<INVALID>", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "DC", "AND", "OR", "EQ", "LTE", "GTE", "NEQ", "LT", 
                      "GT", "LP", "RP", "LCB", "RCB", "LSB", "RSB", "SEMI", 
                      "COMMA", "COLON", "DOT", "ASSIGN", "INT", "INTEGER", 
                      "FLOAT", "STRING", "BOOLEAN", "VOID", "ARRAY", "INHERIT", 
                      "FUNCTION", "IF", "ELSE", "FOR", "WHILE", "DO", "BREAK", 
                      "CONTINUE", "RETURN", "OUT", "AUTO", "OF", "OPERATORS", 
                      "SEPARATORS", "BOOL_LIT", "STRING_LIT", "FLOAT_LIT", 
                      "INT_LIT", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declare = 1
    RULE_var_declare = 2
    RULE_nextID = 3
    RULE_id_list = 4
    RULE_id_list2 = 5
    RULE_atomic_type = 6
    RULE_array_type = 7
    RULE_func_declare = 8
    RULE_func_proto = 9
    RULE_return_type = 10
    RULE_func_body = 11
    RULE_param_declare = 12
    RULE_params_list = 13
    RULE_params = 14
    RULE_params2 = 15
    RULE_types = 16
    RULE_exp_bool = 17
    RULE_exp_int = 18
    RULE_exp_float = 19
    RULE_exp_string = 20
    RULE_exp = 21
    RULE_exp1 = 22
    RULE_exp2 = 23
    RULE_exp3 = 24
    RULE_exp4 = 25
    RULE_exp5 = 26
    RULE_exp6 = 27
    RULE_exp7 = 28
    RULE_operands = 29
    RULE_func_call = 30
    RULE_stmt = 31
    RULE_assign_stmt = 32
    RULE_assign_lhs = 33
    RULE_scalar_var = 34
    RULE_if_stmt = 35
    RULE_for_stmt = 36
    RULE_for_body = 37
    RULE_while_stmt = 38
    RULE_while_body = 39
    RULE_dowhile_stmt = 40
    RULE_break_stmt = 41
    RULE_continue_stmt = 42
    RULE_return_stmt = 43
    RULE_call_stmt = 44
    RULE_call_body = 45
    RULE_call_body2 = 46
    RULE_block_stmt = 47
    RULE_block_body = 48
    RULE_block_body2 = 49
    RULE_block_element = 50
    RULE_index = 51
    RULE_list_exp_int = 52
    RULE_list_exp_int2 = 53
    RULE_literals = 54
    RULE_array_lit = 55
    RULE_exp_list = 56
    RULE_exp_list2 = 57

    ruleNames =  [ "program", "declare", "var_declare", "nextID", "id_list", 
                   "id_list2", "atomic_type", "array_type", "func_declare", 
                   "func_proto", "return_type", "func_body", "param_declare", 
                   "params_list", "params", "params2", "types", "exp_bool", 
                   "exp_int", "exp_float", "exp_string", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "operands", 
                   "func_call", "stmt", "assign_stmt", "assign_lhs", "scalar_var", 
                   "if_stmt", "for_stmt", "for_body", "while_stmt", "while_body", 
                   "dowhile_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "call_stmt", "call_body", "call_body2", "block_stmt", 
                   "block_body", "block_body2", "block_element", "index", 
                   "list_exp_int", "list_exp_int2", "literals", "array_lit", 
                   "exp_list", "exp_list2" ]

    EOF = Token.EOF
    ADD=1
    SUB=2
    MUL=3
    DIV=4
    MOD=5
    NOT=6
    DC=7
    AND=8
    OR=9
    EQ=10
    LTE=11
    GTE=12
    NEQ=13
    LT=14
    GT=15
    LP=16
    RP=17
    LCB=18
    RCB=19
    LSB=20
    RSB=21
    SEMI=22
    COMMA=23
    COLON=24
    DOT=25
    ASSIGN=26
    INT=27
    INTEGER=28
    FLOAT=29
    STRING=30
    BOOLEAN=31
    VOID=32
    ARRAY=33
    INHERIT=34
    FUNCTION=35
    IF=36
    ELSE=37
    FOR=38
    WHILE=39
    DO=40
    BREAK=41
    CONTINUE=42
    RETURN=43
    OUT=44
    AUTO=45
    OF=46
    OPERATORS=47
    SEPARATORS=48
    BOOL_LIT=49
    STRING_LIT=50
    FLOAT_LIT=51
    INT_LIT=52
    ID=53
    BLOCK_COMMENT=54
    LINE_COMMENT=55
    WS=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclareContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclareContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.declare()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 121
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(MT22Parser.Var_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(MT22Parser.Func_declareContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = MT22Parser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.var_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.func_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def nextID(self):
            return self.getTypedRuleContext(MT22Parser.NextIDContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MT22Parser.TypesContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = MT22Parser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(MT22Parser.ID)
                self.state = 128
                self.nextID()
                self.state = 129
                self.exp()
                self.state = 130
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.id_list()
                self.state = 133
                self.match(MT22Parser.COLON)
                self.state = 134
                self.types()
                self.state = 135
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def nextID(self):
            return self.getTypedRuleContext(MT22Parser.NextIDContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MT22Parser.TypesContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_nextID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNextID" ):
                return visitor.visitNextID(self)
            else:
                return visitor.visitChildren(self)




    def nextID(self):

        localctx = MT22Parser.NextIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nextID)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(MT22Parser.COMMA)
                self.state = 140
                self.match(MT22Parser.ID)
                self.state = 141
                self.nextID()
                self.state = 142
                self.exp()
                self.state = 143
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(MT22Parser.COLON)
                self.state = 146
                self.types()
                self.state = 147
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_list)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MT22Parser.ID)
                self.state = 152
                self.id_list2()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list2" ):
                return visitor.visitId_list2(self)
            else:
                return visitor.visitChildren(self)




    def id_list2(self):

        localctx = MT22Parser.Id_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list2)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(MT22Parser.COMMA)
                self.state = 157
                self.match(MT22Parser.ID)
                self.state = 158
                self.id_list2()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_type" ):
                return visitor.visitAtomic_type(self)
            else:
                return visitor.visitChildren(self)




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def index(self):
            return self.getTypedRuleContext(MT22Parser.IndexContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MT22Parser.ARRAY)
            self.state = 165
            self.index()
            self.state = 166
            self.match(MT22Parser.OF)
            self.state = 167
            self.atomic_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_proto(self):
            return self.getTypedRuleContext(MT22Parser.Func_protoContext,0)


        def func_body(self):
            return self.getTypedRuleContext(MT22Parser.Func_bodyContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declare" ):
                return visitor.visitFunc_declare(self)
            else:
                return visitor.visitChildren(self)




    def func_declare(self):

        localctx = MT22Parser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.func_proto()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 170
                self.match(MT22Parser.INHERIT)
                self.state = 171
                self.match(MT22Parser.ID)


            self.state = 174
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_protoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def return_type(self):
            return self.getTypedRuleContext(MT22Parser.Return_typeContext,0)


        def params_list(self):
            return self.getTypedRuleContext(MT22Parser.Params_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func_proto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_proto" ):
                return visitor.visitFunc_proto(self)
            else:
                return visitor.visitChildren(self)




    def func_proto(self):

        localctx = MT22Parser.Func_protoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_proto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(MT22Parser.ID)
            self.state = 177
            self.match(MT22Parser.COLON)
            self.state = 178
            self.match(MT22Parser.FUNCTION)
            self.state = 179
            self.return_type()
            self.state = 180
            self.params_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_return_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = MT22Parser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_return_type)
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 185
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 186
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 6)
                self.state = 187
                self.array_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 7)
                self.state = 188
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):

        localctx = MT22Parser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MT22Parser.TypesContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param_declare
